# cmkr

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  cmake.toml  cmkr.cmake
.github/: FUNDING.yml
.github/workflows/: build.yml  lint.yml
Shell Integration/: add_cmkr.reg  cmkr.bat  cmkr.cmake
cmake/: CMakeLists.txt  bump_version.cmake  cmake.toml  cmkr.cmake  custom_targets.cmake  example.md.in  generate_documentation.cmake  generate_resources.cmake  replace_tag.cmake  resource.hpp.in  version.hpp.in
cmake/src/: example.cpp
docs/: .gitignore  CNAME  Gemfile  _config.yml  basics.md  building.markdown  cmake-toml.md  command-line.md  concepts.md  examples.markdown  getting-started.html  getting-started.md  index.markdown  index.md  philosophy.md  run-locally.sh  run-wsl.sh  serve.sh  usage.markdown
docs/examples/: basic.md  compile-options.md  cpp-version-change.markdown  custom-command.md  cxx-standard.md  fetch-content.md  generator-executable.md  globbing.md  import-from-folder.markdown  import-from-git.markdown  index.markdown  (+9 more)
include/: args.h  arguments.hpp  build.h  build.hpp  cmake.hpp  cmake_generator.hpp  enum_helper.hpp  error.h  error.hpp  fs.hpp  gen.h  help.h  help.hpp  literals.h  literals.hpp  project_parser.hpp
src/: args.cpp  args.h  args.hpp  arguments.cpp  build.cpp  cmake.cpp  cmake.hpp  cmake_generator.cpp  error.cpp  error.h  fs.hpp  gen.cpp  gen.h  gen.hpp  help.cpp  help.h  help.hpp  main.cpp  project_parser.cpp
tests/: .gitignore  CMakeLists.txt  cmake.toml
(+60 files in other folders)
